*ovirt-engine-3.3.3 (04 Feb 2014)

  04 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-engine-3.3.3.ebuild:
  version bump

  28 Jan 2014; Alon Bar-Lev <alonbl@redhat.com> files/ovirt-engine.init.d,
  ovirt-engine-3.3.2.ebuild, ovirt-engine-9999.ebuild:
  Misc updates

*ovirt-engine-3.3.2 (13 Jan 2014)

  13 Jan 2014; Alon Bar-Lev <alonbl@gentoo.org> +ovirt-engine-3.3.2.ebuild,
  ovirt-engine-9999.ebuild:
  Version bump

*ovirt-engine-3.3.1 (26 Nov 2013)

  26 Nov 2013; Alon Bar-Lev <alonbl@gentoo.org> +ovirt-engine-3.3.1.ebuild,
  files/ovirt-engine-notifier.init.d, files/ovirt-engine.init.d,
  ovirt-engine-9999.ebuild:
  ovirt-engine-3.3.1

  25 Oct 2013; Alon Bar-Lev <alonbl@redhat.com> +files/java-home.local,
  metadata.xml, ovirt-engine-9999.ebuild:
  sync with upstream

  27 Aug 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  Update otopi, ovirt-host-deploy dependencies

  18 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
  sync with upstream

  18 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
  sync with upstream

  23 Jul 2013; Alon Bar-Lev <alonbl@redhat.com>
  +files/ovirt-engine-notifier.init.d, files/ovirt-engine.init.d,
  files/ovirt-websocket-proxy.init.d, ovirt-engine-9999.ebuild:
  sync upstream

  17 Jul 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
  sync with upstream

  31 May 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  remove workaround of master

  31 May 2013; Alon Bar-Lev <alonbl@redhat.com>
  +files/ovirt-websocket-proxy.init.d, files/ovirt-engine.init.d, metadata.xml,
  ovirt-engine-9999.ebuild:
  sync upstream

  14 May 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
  add bind-tools dependency

  09 May 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
  do not compile all locales when minimal

  25 Apr 2013; Alon Bar-Lev <alonbl@redhat.com> files/ovirt-engine.init.d:
  follow upstream service name
