@@ -1,3 +1,8 @@
+*ovirt-engine-3.3.4 (05 Mar 2014)
+
+  05 Mar 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-engine-3.3.4.ebuild:
+  Version bump
+
 *ovirt-engine-3.3.3 (04 Feb 2014)
 
   04 Feb 2014; Alon Bar-Lev <alonbl@redhat.com> +ovirt-engine-3.3.3.ebuild:
